--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins ', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
-/* header section */
+
+/* Header section */
 
 header {
   width: 100%;
@@ -16,7 +18,6 @@ header {
   align-items: center;
   position: relative;
   z-index: 1000;
-  background: black;
 }
 
 header nav a {
@@ -32,10 +33,13 @@ a.active {
   background: #14ff72cb;
   border-radius: 2px;
 }
+
 a:hover {
   background: #14ff72cb;
   border-radius: 2px;
 }
+
+/* Header section */
 
 /* carousel */
 
@@ -46,6 +50,7 @@ a:hover {
   overflow: hidden;
   position: relative;
 }
+
 .carousel .list .item {
   width: 180px;
   height: 250px;
@@ -60,6 +65,7 @@ a:hover {
   z-index: 100;
   transition: 1s;
 }
+
 .carousel .list .item:nth-child(1),
 .carousel .list .item:nth-child(2) {
   top: 0;
@@ -69,32 +75,40 @@ a:hover {
   width: 100%;
   height: 100%;
 }
+
 .carousel .list .item:nth-child(3) {
   left: 67%;
 }
+
 .carousel .list .item:nth-child(4) {
   left: calc(67% + 200px);
 }
+
 .carousel .list .item:nth-child(5) {
   left: calc(67% + 400px);
 }
+
 .carousel .list .item:nth-child(6) {
   left: calc(67% + 600px);
 }
+
 .carousel .list .item:nth-child(n + 7) {
   left: calc(67% + 800px);
   opacity: 0;
 }
 
-.list .item .content .title {
+.list .item .content {
+  position: absolute;
+  top: 50%;
+  left: 100px;
   transform: translateY(-50%);
   width: 400px;
   text-align: left;
-  color: black;
+  color: #fff;
   display: none;
 }
 
-.list .item:nth-child(2).content {
+.list .item:nth-child(2) .content {
   display: block;
 }
 
@@ -103,18 +117,20 @@ a:hover {
   text-transform: uppercase;
   color: #14ff72cb;
   font-weight: bold;
-  opacity: 1;
+  line-height: 1;
+
+  opacity: 0;
   animation: animate 1s ease-in-out 0.3s 1 forwards;
 }
 
 .content .name {
   font-size: 100px;
   text-transform: uppercase;
-  color: #14ff72cb;
   font-weight: bold;
   line-height: 1;
   text-shadow: 3px 4px 4px rgba(255, 255, 255, 0.8);
-  opacity: 1;
+
+  opacity: 0;
   animation: animate 1s ease-in-out 0.6s 1 forwards;
 }
 
@@ -123,13 +139,15 @@ a:hover {
   margin-bottom: 20px;
   font-size: 18px;
   margin-left: 5px;
-  opacity: 1;
+
+  opacity: 0;
   animation: animate 1s ease-in-out 0.9s 1 forwards;
 }
 
 .content .btn {
   margin-left: 5px;
-  opacity: 1;
+
+  opacity: 0;
   animation: animate 1s ease-in-out 1.2s 1 forwards;
 }
 
@@ -144,6 +162,7 @@ a:hover {
 .content .btn button:nth-child(1) {
   margin-right: 15px;
 }
+
 .content .btn button:nth-child(2) {
   background: transparent;
   color: #14ff72cb;
@@ -163,12 +182,15 @@ a:hover {
     transform: translate(0, 100px);
     filter: blur(33px);
   }
+
   to {
     opacity: 1;
     transform: translate(0);
     filter: blur(0);
   }
 }
+
+/* Carousel */
 
 /* next prev arrows */
 
@@ -198,13 +220,13 @@ a:hover {
   transition: 0.5s;
   cursor: pointer;
 }
+
 .arrows button:hover {
   background: #fff;
   color: #000;
 }
 
-/* times runing */
-
+/* time running */
 .carousel .timeRunning {
   position: absolute;
   z-index: 1000;
@@ -225,17 +247,22 @@ a:hover {
   }
 }
 
+/* Responsive Design */
+
 @media screen and (max-width: 999px) {
   header {
     padding-left: 50px;
   }
-  .list .item .content .title {
+
+  .list .item .content {
     left: 50px;
   }
+
   .content .title,
   .content .name {
     font-size: 70px;
   }
+
   .content .des {
     font-size: 16px;
   }
@@ -246,13 +273,16 @@ a:hover {
     font-size: 14px;
     margin-right: 0;
   }
-  .list .item .content .title {
+
+  .list .item .content {
     top: 40%;
   }
+
   .content .title,
   .content .name {
     font-size: 45px;
   }
+
   .content .btn button {
     padding: 10px 15px;
     font-size: 14px;
